# CPFA-ROS

./: .gitignore  .gitmodules  README.md
CPFA_parameters/: clustered.yaml  custom.yaml  no_obstacle_14X14arena_4robots.yaml  powerlaw.yaml  test.launch  uniform.yaml  with_obstacle_14X14arena_4robots.yaml
launch/: swarmie.launch
misc/: deploy.sh  rover_onboard_node_launch.sh
results/: collision_data_48_11.txt  collision_data_48_20.txt  collision_data_48_37.txt  collision_data_49_26.txt  collision_data_50_9.txt  score_data_48_11.txt  score_data_48_20.txt  score_data_48_21.txt  score_data_49_26.txt
results/no_obstacle/: collision_data_48_21.txt  score_data_48_21.txt
results/others/: collision_data_48_21.txt  collision_data_48_24.txt  collision_data_48_29.txt  collision_data_48_56.txt  (+4 more)
src/behaviours/: CMakeLists.txt  package.xml
src/behaviours/msg/: Rover.msg
src/behaviours/src/: CPFAParameters.h  CPFASearchController.cpp  CPFASearchController.h  Controller.h  DriveController.cpp  DriveController.h  DropOffController.cpp  DropOffController.h  LogicController.cpp  LogicController.h  ManualWaypointController.cpp  ManualWaypointController.h  ObstacleController.cpp  ObstacleController.h  PID.cpp  PID.h  Pheromone.cpp  Pheromone.h  PheromoneController.cpp  PheromoneController.h  PickUpController.cpp  PickUpController.h  Point.h  ROSAdapter.cpp  RandomDispersalController.cpp  RandomDispersalController.h  RangeController.cpp  RangeController.h  Result.h  ReturnToNestController.cpp  ReturnToNestController.h  SearchController.cpp  SearchController.h  SiteFidelityController.cpp  SiteFidelityController.h  TagPoint.h
src/mobility/: CMakeLists.txt  package.xml
src/mobility/msg/: Rover.msg
src/mobility/src/: CPFASearchController.cpp  CPFASearchController.h  Pheromone.cpp  Pheromone.h  mobility.cpp
(+39 files in other folders)
